--- a/css/general.css
+++ b/css/general.css
@@ -1,47 +1,52 @@
 @font-face {
-    font-family: 'YouSheYuFeiTeJianKangTi';
-    src: url('../font/YouSheYuFeiTeJianKangTi-2.ttf') format('truetype');
+    font-family: 'f1';
+    src: url('../font/Dancing_Script/DancingScript-VariableFont_wght.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'HongLeiXingShuJianTi';
-    src: url('../font/HongLeiXingShuJianTi-2.otf') format('opentype');
+    font-family: 'f2';
+    src: url('../font/Edu_AU_VIC_WA_NT_Guides/EduAUVICWANTGuides-VariableFont_wght.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'SmileySans-Oblique';
-    src: url('../font/SmileySans-Oblique-2.ttf') format('truetype');
+    font-family: 'f3';
+    src: url('../font/Gloria_Hallelujah/GloriaHallelujah-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: oblique;
 }
 
 @font-face {
-    font-family: 'AlimamaFangYuanTiVF-Thin';
-    src: url('../font/AlimamaFangYuanTiVF-Thin-2.ttf') format('truetype');
-    font-weight: 100;
+    font-family: 'f4';
+    src: url('../font/Indie_Flower/IndieFlower-Regular.ttf') format('truetype');
     /* Assuming Thin corresponds to font-weight 100 */
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'MaoKenWangXingYuan';
-    src: url('../font/MaoKenWangXingYuan-2.ttf') format('truetype');
+    font-family: 'f5';
+    src: url('../font/Playwrite_GB_S/PlaywriteGBS-VariableFont_wght.ttf') format('truetype');
     font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'f6';
+    src: url('../font/Satisfy/Satisfy-Regular.ttf') format('truetype');
     font-style: normal;
 }
 
 * {
     margin: 0;
     padding: 0;
-    font-family: 'YouSheYuFeiTeJianKangTi', 'HongLeiXingShuJianTi', 'SmileySans-Oblique', 'AlimamaFangYuanTiVF-Thin', 'MaoKenWangXingYuan';
-
+    font-family: 'f3', 'f5', 'f4', 'f6', 'f1', 'f2';
 }
 
 body {
+    box-sizing: border-box;
     height: 100vh;
     width: 100vw;
     /* background: url(../img/Background/background_10.jpg) no-repeat center center fixed; */
@@ -56,6 +61,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: row;
     box-shadow: 0px 0px 0.2vh 0.2vh rgb(255, 255, 255) inset;
 }
 
@@ -67,25 +73,98 @@ body::before {
     content: "";
     position: absolute;
     z-index: -1;
-    width: 100vw;
-    height: 100vh;
+    /* width: 50vw;
+    height: 50vh; */
     background-color: rgba(0, 0, 0, 0.178);
     background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-position: center;
-    filter: blur(5vw);
-    -webkit-filter: blur(5vw);
-    /*四周向内阴影白色发光*/
+    backdrop-filter: blur(1px) brightness(111%);
+    background-color: rgba(255, 255, 255, 0.1);
+    border-radius: 10px;
 }
 
+.half_container{
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    padding: 10px;
+    gap: 10px;
+}
+
+
+.right_container{
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    flex-direction: column;
+    width: 100%;
+    height: 50%;
+}
+
+.left_container{
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+    width: 100%;
+    height: 50%;
+}
+.right_top_container{
+    box-sizing: border-box;
+    display: flex;
+    justify-content:flex-start;
+    align-items: flex-start;
+    flex-direction: row;
+    width: 80%;
+    height: 200px;
+}
+
+.right_middle_container{
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    width: 80%;
+    height: 200px;
+}
+
+.right_bottom_container{
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    width: 80%;
+    height: 200px;
+}
+
+
+
+
+
+
+
+
+
+
 .center_container {
-    margin: 1vw;
-    width: max-content;
-    height: max-content;
+    box-sizing: border-box;
+    margin: 10px;
+    width: 500px;
+    height: 100px;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 2vh;
+    grid-template-columns: repeat(auto-fill, 200px);
+    gap: 10px;
     justify-content: center;
     align-items: center;
 
@@ -94,8 +173,8 @@ body::before {
 
 .center_inner_container {
     position: relative;
-    width: max-content;
-    height: max-content;
+    width: 100%;
+    height: 100%;
     cursor: pointer;
     justify-self: center;
     align-self: center;
@@ -107,40 +186,26 @@ body::before {
 }
 
 .center_inner_lighting_container {
+    box-sizing: border-box;
     position: relative;
-    width: 20vw;
-    height: 12vw;
-    border-radius: 2vh;
-    box-shadow: 0px 0px 0.2vh 0.2vh rgb(255, 255, 255);
+    width: 100%;
+    height:  100%;
+    border-radius: 2px;
+    box-shadow: 0px 0px 1px 0.5px rgb(255, 255, 255);
 
     transition: all .3s;
     /* transition: border-radius cubic-bezier(0.075, 0.82, 0.165, 1) 1s,
     transform cubic-bezier(0.075, 0.82, 0.165, 1) 1s; */
 }
 
-@media screen and (max-width: 1000px) {
-    .center_inner_lighting_container {
-        width: 20vh;
-        height: 12vh;
-        border-radius: 2vw;
-    }
-
-    /* .center_inner_container:nth-child(5) .center_inner_lighting_container,
-    .center_inner_container:nth-child(6) .center_inner_lighting_container {
-        width: 40vh;
-        height: 24vh;
-        border-radius: 2vw;
-    } */
-
-}
-
 
 
 .center_inner_content_container {
+    box-sizing: border-box;
     position: relative;
-    width: 20vw;
-    height: 12vw;
-    border-radius: 2vh;
+    width: 100%;
+    height: 100%;
+    border-radius:2px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -150,36 +215,15 @@ body::before {
     transform cubic-bezier(0.075, 0.82, 0.165, 1) 1s; */
 }
 
-@media screen and (max-width: 1000px) {
-    .center_inner_content_container {
-        width: 20vh;
-        height: 12vh;
-        border-radius: 2vw;
-    }
 
-    /* .center_inner_container:nth-child(5) .center_inner_content_container,
-    .center_inner_container:nth-child(6) .center_inner_content_container {
-        width: 40vh;
-        height: 24vh;
-        border-radius: 2vw;
-    } */
-
-}
 
 .center_inner_content_container:hover {
     transform: scale(0.98);
-    border-radius: 2vh;
+    border-radius: 2px;
 }
 
 .center_inner_container:nth-child(5) .center_inner_content_container:hover {
     transform: scale(1) !important;
-}
-
-
-@media screen and (max-width: 1000px) {
-    .center_inner_content_container:hover {
-        border-radius: 2vw;
-    }
 }
 
 
@@ -191,82 +235,4 @@ body::before {
     /* border-bottom-right-radius: 50px;
     border-top-left-radius: 50px;
     transform: scale(1.03); */
-}
-
-@media screen and (max-width: 1000px) {
-    .center_container {
-        overflow: hidden;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 3vw;
-        margin: 1vh;
-        grid-template-areas:
-            "item5 item5"
-            "item1 item2"
-            "item3 item4"
-            "item6 item6"
-            "item7 item8"
-            "item9 item9";
-    }
-
-    .center_inner_container:nth-child(1) {
-        grid-area: item1;
-    }
-
-    .center_inner_container:nth-child(2) {
-        grid-area: item2;
-    }
-
-    .center_inner_container:nth-child(3) {
-        grid-area: item3;
-    }
-
-    .center_inner_container:nth-child(7) {
-        grid-area: item4;
-    }
-
-    .center_inner_container:nth-child(5) {
-        grid-area: item5;
-        justify-self: center;
-        align-self: center;
-        text-align: center;
-    }
-
-    .center_inner_container:nth-child(8) {
-        grid-area: item6;
-        justify-self: center;
-        align-self: center;
-        text-align: center;
-    }
-
-    .center_inner_container:nth-child(8),
-    .center_inner_container:nth-child(8) .center_inner_lighting_container,
-    .center_inner_container:nth-child(8) .center_inner_content_container,
-    .center_inner_container:nth-child(8) .center_inner_content_container:hover,
-    .center_inner_container:nth-child(8) .center_inner_lighting_container:hover,
-    .center_inner_container:nth-child(8) .time_card {
-        width: 43vh;
-    }
-
-    .center_inner_container:nth-child(4) {
-        grid-area: item7;
-    }
-
-    .center_inner_container:nth-child(6) {
-        grid-area: item8;
-    }
-
-    .center_inner_container:nth-child(9) {
-        grid-area: item9;
-        justify-self: center;
-        align-self: center;
-        text-align: center;
-    }
-
-    .center_inner_container:nth-child(9),
-    .center_inner_container:nth-child(9) .center_inner_lighting_container,
-    .center_inner_container:nth-child(9) .center_inner_content_container,
-    .center_inner_container:nth-child(9) .center_inner_content_container:hover,
-    .center_inner_container:nth-child(9) .center_inner_lighting_container:hover {
-        width: 43vh;
-    }
 }
