--- a/css/general.css
+++ b/css/general.css
@@ -39,6 +39,84 @@
     font-style: normal;
 }
 
+:root {
+    --home-background-color: rgba(192, 192, 186, 0.566);
+    --home-leftwall-div-font-color: rgba(0, 0, 0, 0.9);
+    --home-leftwall-content-font-color: rgba(0, 0, 0, 0.9);
+    --home-leftwall-div-text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.9);
+    --home-leftwall-content-text-shadow: 0.5px 0.5px 0.5px rgba(0, 0, 0, 0.9);
+    --home-rightwall-content-font-color: rgba(69, 66, 66, 0.959);
+    --home-rightwall-content-text-shadow: 0.5px 0.5px 0.5px rgba(69, 66, 66, 0.959);
+    --home-shadow-color: rgba(239, 239, 239, 0.9);
+    --home-leftwall-border-color: rgba(0, 0, 0, 0.942);
+    --home-rightwall-border-color: rgba(0, 0, 0, 0.942);
+    --home-leftwall-shadow-color: rgba(0, 0, 0, 0.393);
+    --home-rightwall-shadow-color: rgba(0, 0, 0, 0.393);
+
+    --home-blist-background-color: rgba(240, 240, 228, 0.977);
+    --home-blist-border-color: rgba(0, 0, 0, 0.9);
+    --home-blist-font-color: rgba(0, 0, 0, 0.9);
+    --home-blist-shadow-color: rgba(0, 0, 0, 0.393);
+
+    --home-bubble-background-color: rgba(240, 240, 228, 0.977);
+    --home-bubble-font-color: rgba(0, 0, 0, 0.9);
+    --home-bubble-border-color: rgba(0, 0, 0, 0.9);
+    --home-bubble-shadow-color: rgba(0, 0, 0, 0.393);
+
+}
+
+/* Day 主题 */
+.day_theme {
+    --home-background-color: rgba(192, 192, 186, 0.566);
+    --home-leftwall-div-font-color: rgba(0, 0, 0, 0.9);
+    --home-leftwall-content-font-color: rgba(0, 0, 0, 0.9);
+    --home-leftwall-div-text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.9);
+    --home-leftwall-content-text-shadow: 0.5px 0.5px 0.5px rgba(0, 0, 0, 0.9);
+    --home-rightwall-content-font-color: rgba(69, 66, 66, 0.959);
+    --home-rightwall-content-text-shadow: 0.5px 0.5px 0.5px rgba(69, 66, 66, 0.959);
+    --home-shadow-color: rgba(239, 239, 239, 0.9);
+    --home-leftwall-border-color: rgba(0, 0, 0, 0.942);
+    --home-rightwall-border-color: rgba(0, 0, 0, 0.942);
+    --home-leftwall-shadow-color: rgba(0, 0, 0, 0.393);
+    --home-rightwall-shadow-color: rgba(0, 0, 0, 0.393);
+
+    --home-blist-background-color: rgba(240, 240, 228, 0.977);
+    --home-blist-border-color: rgba(0, 0, 0, 0.9);
+    --home-blist-font-color: rgba(0, 0, 0, 0.9);
+    --home-blist-shadow-color: rgba(0, 0, 0, 0.393);
+
+    --home-bubble-background-color: rgba(240, 240, 228, 0.977);
+    --home-bubble-font-color: rgba(0, 0, 0, 0.9);
+    --home-bubble-border-color: rgba(0, 0, 0, 0.9);
+    --home-bubble-shadow-color: rgba(0, 0, 0, 0.393);
+}
+
+/* Night 主题 */
+.night_theme {
+    --home-background-color: rgba(0, 0, 0, 0.777);
+    --home-leftwall-div-font-color: rgba(255, 255, 255, 0.9);
+    --home-leftwall-content-font-color: rgba(255, 255, 255, 0.9);
+    --home-leftwall-div-text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.9);
+    --home-leftwall-content-text-shadow: 0.5px 0.5px 0.5px rgba(255, 255, 255, 0.9);
+    --home-rightwall-content-font-color: rgba(223, 216, 216, 0.959);
+    --home-rightwall-content-text-shadow: 0.5px 0.5px 0.5px rgba(135, 129, 129, 0.959);
+    --home-shadow-color: rgba(239, 239, 239, 0.9);
+    --home-leftwall-border-color: rgba(255, 255, 255, 0.9);
+    --home-rightwall-border-color: rgba(255, 255, 255, 0.9);
+    --home-leftwall-shadow-color: rgba(255, 255, 255, 0.393);
+    --home-rightwall-shadow-color: rgba(255, 255, 255, 0.393);
+
+    --home-blist-background-color: rgba(0, 0, 0, 0.9);
+    --home-blist-border-color: rgba(240, 240, 228, 0.977);
+    --home-blist-font-color: rgba(240, 240, 228, 0.977);
+    --home-blist-shadow-color: rgba(240, 240, 228, 0.977);
+
+    --home-bubble-background-color: rgba(0, 0, 0, 0.9);
+    --home-bubble-font-color: rgba(240, 240, 228, 0.977);
+    --home-bubble-border-color: rgba(240, 240, 228, 0.977);
+    --home-bubble-shadow-color: rgba(240, 240, 228, 0.977);
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -106,7 +184,7 @@ body::before {
     align-items: flex-end;
     flex-direction: column;
     width: 100%;
-    height: 50%;
+    height: max-content;
 }
 
 .left_container{
@@ -125,27 +203,17 @@ body::before {
     align-items: flex-start;
     flex-direction: row;
     width: 80%;
-    height: 200px;
-}
-
-.right_middle_container{
-    box-sizing: border-box;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    width: 80%;
-    height: 200px;
+    height: 150px;
 }
 
 .right_bottom_container{
     box-sizing: border-box;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content:flex-start;
+    align-items: flex-start;
     flex-direction: row;
     width: 80%;
-    height: 200px;
+    height: max-content;
 }
 
 
