--- a/css/wave.css
+++ b/css/wave.css
@@ -35,21 +35,21 @@
 }
 
 .infotop h1 {
-    font-size: 2.2vw;
+    font-size: 14px;
     font-weight: 600;
     color: rgb(0, 0, 0);
 }
 
 .infotop p {
-    font-size: 1vw;
+    font-size: 12px;
     font-weight: 300;
-    margin-top: 1.5vw;
+    margin-top: 5px;
     /* text-transform: lowercase; */
     color: rgb(0, 0, 0);
 }
 
 .infotop button {
-    font-size: 2.2vw;
+    font-size: 14px;
     font-weight: 600;
     background-color: rgba(255, 255, 255, 0);
     color: rgb(5, 3, 3);
@@ -64,21 +64,6 @@
     text-shadow: 0 0 1vw rgba(255, 255, 255, 0.5);
 }
 
-@media screen and (max-width: 1000px) {
-    .infotop h1 {
-        font-size: 2.5vh;
-    }
-
-    .infotop p {
-        font-size: 2vh;
-        margin-top: 1.5vh;
-    }
-
-    .infotop button {
-        font-size: 2.5vh;
-    }
-
-}
 
 
 @keyframes wave_move {
