--- a/css/earth_star.css
+++ b/css/earth_star.css
@@ -9,6 +9,7 @@
     width: 40%;
     aspect-ratio: 1 / 1;
     position: absolute;
+    overflow: visible;
 }
 
 .earth {
@@ -23,6 +24,7 @@
         10px 0px 12px rgba(0, 0, 0, 0.628) inset, 13px 0px 18px rgba(175, 168, 168, 0.025) inset;
 
     transition: all 0.5s ease-in-out;
+    overflow: visible;
 }
 
 
@@ -136,6 +138,7 @@
     -webkit-animation: ring-rotating 120s infinite alternate;
     animation: ring-rotating 12s infinite alternate;
     mix-blend-mode: luminosity;
+    overflow: visible;
 }
 
 
