--- a/css/general.css
+++ b/css/general.css
@@ -163,6 +163,22 @@ body::before {
     border-radius: 10px;
 }
 
+@media screen and (max-width: 1000px) {
+    * {
+        overflow-x: hidden;
+        box-sizing: border-box;
+    }
+
+    body {
+        height: max-content;
+        width: 100vw;
+        flex-direction: column;
+        box-shadow: none;
+        overflow-x: hidden;
+    }
+
+}
+
 .half_container{
     box-sizing: border-box;
     display: flex;
@@ -176,6 +192,16 @@ body::before {
     gap: 10px;
 }
 
+@media screen and (max-width: 1000px) {
+    .half_container{
+        box-sizing: border-box;
+        width: 100vw;
+        height: 100%;
+        padding: 0px;
+        gap: 0px;
+    }
+}
+
 
 .right_container{
     box-sizing: border-box;
@@ -187,6 +213,18 @@ body::before {
     height: max-content;
 }
 
+@media screen and (max-width: 1000px) {
+    .right_container{
+        box-sizing: border-box;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        width: 100%;
+    }
+    
+}
+
 .left_container{
     box-sizing: border-box;
     display: flex;
@@ -196,6 +234,20 @@ body::before {
     width: 100%;
     height: 50%;
 }
+
+
+@media screen and (max-width: 1000px) {
+    .left_container{
+        box-sizing: border-box;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        width: 100%;
+        height: 50%;
+    }
+    
+}
 .right_top_container{
     box-sizing: border-box;
     display: flex;
@@ -204,6 +256,19 @@ body::before {
     flex-direction: row;
     width: 80%;
     height: 150px;
+}
+
+@media screen and (max-width: 1000px) {
+    .right_top_container{
+        box-sizing: border-box;
+        display: flex;
+        justify-content:center;
+        align-items: center;
+        flex-direction: column;
+        width: 100%;
+        height: 50%;
+    }
+    
 }
 
 .right_bottom_container{
@@ -216,7 +281,18 @@ body::before {
     height: max-content;
 }
 
-
+@media screen and (max-width: 1000px) {
+    .right_bottom_container{
+        box-sizing: border-box;
+        display: flex;
+        justify-content:center;
+        align-items: center;
+        flex-direction: column;
+        width: 100%;
+        height: 50%;
+    }
+    
+}
 
 
 
@@ -253,6 +329,7 @@ body::before {
     align-items: center;
 }
 
+
 .center_inner_lighting_container {
     box-sizing: border-box;
     position: relative;
@@ -260,11 +337,11 @@ body::before {
     height:  100%;
     border-radius: 2px;
     box-shadow: 0px 0px 1px 0.5px rgb(255, 255, 255);
-
     transition: all .3s;
     /* transition: border-radius cubic-bezier(0.075, 0.82, 0.165, 1) 1s,
     transform cubic-bezier(0.075, 0.82, 0.165, 1) 1s; */
 }
+
 
 
 
